--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -8,23 +8,26 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+/*Removed header class and styled header element directly. Since header section is for navigation bar of the webpage, 
+ I expect header to have same style and same position if this style.css is reused on other pages such as Search Engine Optimization, Online Reputation Management, Social Media Marketing.
+ Therefore, no need to add header class*/
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
 }
 
-.header nav {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +35,11 @@ body {
     font-size: 20px;
 }
 
-.header nav ul {
+header nav ul {
     list-style-type: none;
 }
 
-.header nav ul li {
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -51,7 +54,7 @@ p {
 }
 
 /*"figure" element can be styled (figure {...}) instead of using hero class here (if so class="hero" should be removed from html file) .
-    However I decided to keep class "hero", so the figure element can be also used in the future. (such as adding different image figure with different size and position)*/
+    However I decided to keep class "hero", so the figure element can be also used in the future with different styles. (such as adding different image figure with different size and position)*/
 .hero {
     height: 800px;
     width: 100%;
@@ -88,26 +91,26 @@ p {
     background-color: #2589bd;
 }
 
-/*Unified benefit-lead, benefit-brand, benefit-cost classes to 
-one class(.aside_benefits) since all of the articles in the aside have same styles*/
-.aside_benefits {
+/*Unified benefit-lead, benefit-brand, benefit-cost classes into 
+one class(.benefits_aside) since all of the sections nested in the aside have same styles*/
+.benefits_aside {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.aside_benefits h3 {
+.benefits_aside h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.aside_benefits img {
+.benefits_aside img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-/*Unified search-engine-optimzation, online-reputation-management, social-media-marketing classes to 
-one class(.content_article) since all of the articles in the section have same styles*/
+/*Unified search-engine-optimzation, online-reputation-management, social-media-marketing classes into 
+one class(.content_article) since all of the articles nested in class="content" have same styles*/
 .content_article {
     margin-bottom: 20px;
     padding: 50px;
